syntax = "proto3";
option optimize_for = SPEED;

package proto.com.sysalto.render.serialization;

import "report_common_proto.proto";

message PdfBaseItem_proto {
    int64 id = 1;
    int64 offset = 2;
    oneof field {
        PdfCatalog_proto pdfCatalogProto = 3;
        PdfPage_proto pdfPageProto = 4;
        PdfFont_proto pdfFontProto = 5;
        PdfPageContent_proto pdfPageContentProto = 6;
        PdfPageList_proto pdfPageListProto = 7;
        PdfImage_proto pdfImageProto = 8;
        PdfShaddingFctColor_proto pdfShaddingFctColor_proto = 9;
        PdfColorShadding_proto pdfColorShadding_proto = 10;
        PdfGPattern_proto pdfGPattern_proto = 11;
        PdfFontStream_proto pdfFontStream_proto = 12;
        PdfFontDescriptor_proto pdfFontDescriptor_proto = 13;
        PdfGoToPage_proto pdfGoToPage_proto = 14;
        PdfLink_proto pdfLink_proto = 15;
        PdfGoToUrl_proto pdfGoToUrl_proto = 16;
    }
}
message PdfCatalog_proto {
    repeated int64 idPdfPageListOpt = 1;
    repeated int64 idPdfNamesOpt = 2;
}

message PdfPage_proto {
    int64 parentId = 1;
    float pageWidth = 2;
    float pageHeight = 3;
    repeated int64 idFontList = 4;
    repeated int64 idPdfPatternList = 5;
    repeated int64 idAnnotationList = 6;
    repeated int64 idImageList = 7;
    repeated int64 idContentPageOpt = 8;
    int64 leafNbr = 9;
}


message PdfFont_proto {
    string refName = 1;
    string fontKeyName = 2;
    repeated FontEmbeddedDef_proto fontEmbeddedDef = 3;
}

message FontEmbeddedDef_proto {
    int64 idPdfFontDescriptor = 1;
    int64 idPdfFontStream = 2;
}

message PdfPageItem_proto {
    oneof fieldItem {
        PdfText_proto pdfText_proto = 1;
        PdfGraphic_proto pdfGraphic_proto = 2;
    }
}


message PdfGraphic_proto {
    repeated PdfGraphicFragment_proto pdfGraphicFragment_proto = 1;
}


message PdfTxtFragment_proto {
    float x = 1;
    float y = 2;
    com.sysalto.report.serialization.common.ReportTxt_proto rtext_proto = 3;
    string fonttRefName = 4;
}


message PdfText_proto {
    repeated PdfTxtFragment_proto txtList = 1;
}

message PdfPageContent_proto {
    repeated PdfPageItem_proto pdfPageItem_proto = 3;
    bool pdfCompression = 4;
}

message PdfPageList_proto {
    int64 leafNbr = 1;
    repeated int64 parentId = 2;
    repeated int64 pageList = 3;
}

message PdfImage_proto {
    string fileName = 1;
}


message PdfShaddingFctColor_proto {
    com.sysalto.report.serialization.common.ReportColor_proto color1 = 1;
    com.sysalto.report.serialization.common.ReportColor_proto color2 = 2;

}

message PdfColorShadding_proto {
    float x0 = 1;
    float y0 = 2;
    float x1 = 3;
    float y1 = 4;
    int64 idPdfShaddingFctColor = 5;
}

message PdfGPattern_proto {
    int64 idPdfShadding = 1;
}


message PdfGraphicFragment_proto {
    string content = 1;
    oneof field {
        DrawLine_proto drawLine_proto = 2;
        PdfRectangle_proto pdfRectangle_proto = 3;
        DrawStroke_proto drawStroke_proto = 4;
        PdfDrawImage_proto pdfDrawImage_proto = 5;
        com.sysalto.report.serialization.common.DirectDrawMovePoint_proto directDrawMovePoint_proto = 7;
        com.sysalto.report.serialization.common.DirectDrawLine_proto directDrawLine_proto = 8;
        com.sysalto.report.serialization.common.DirectFillStroke_proto directFillStroke_proto = 9;
        com.sysalto.report.serialization.common.DirectDrawRectangle_proto directDrawRectangle_proto = 10;
        com.sysalto.report.serialization.common.DirectDraw_proto directDraw_proto = 11;
        com.sysalto.report.serialization.common.DirectDrawCircle_proto directDrawCircle_proto = 12;
        com.sysalto.report.serialization.common.DirectDrawArc_proto directDrawArc_proto = 13;
        com.sysalto.report.serialization.common.DirectDrawFill_proto direct_draw_fill_proto = 14;
        com.sysalto.report.serialization.common.DirectDrawStroke_proto direct_draw_stroke_proto = 15;
        com.sysalto.report.serialization.common.DirectDrawClosePath_proto direct_draw_close_path_proto = 16;
    }
}


message DrawStroke_proto {

}

message PdfRectangle_proto {
    int64 x2 = 1;
    float radius = 2;
    repeated int64 idPatternColor = 3;
    int64 y1 = 4;
    int64 y2 = 5;
    int64 x1 = 6;
    repeated com.sysalto.report.serialization.common.ReportColor_proto borderColor = 7;
    repeated com.sysalto.report.serialization.common.ReportColor_proto fillColor = 8;
}


message LineDashType_proto {
    int32 unit = 1;
    int32 phase = 2;
}

message DrawLine_proto {
    float x1 = 1;
    float y1 = 2;
    float x2 = 3;
    float y2 = 4;
    float vlineWidth = 5;
    com.sysalto.report.serialization.common.ReportColor_proto color = 6;
    com.sysalto.report.serialization.common.OptionLineDashType_proto lineDashType = 7;
}

message PdfDrawImage_proto {
    float x = 1;
    float y = 2;
    float scale = 3;
    int64 idPdfImage = 4;
    repeated float opacity = 5;

}

enum RFontAttribute_proto {
    NORMAL = 0;
    BOLD = 1;
    ITALIC = 2;
    BOLD_ITALIC = 3;
}

message RColor_proto {
    int32 r = 1;
    int32 g = 2;
    int32 b = 3;
    float opacity = 4;
}



message StringDouble_proto {
    string value1 = 1;
    double value2 = 2;

}

message EmbeddedFontDescriptor_proto {
    GlyphWidth_proto glyphWidth = 1;
    int32 capHeight = 2;
    FontBBox_proto fontBBox = 3;
    int32 ascent = 4;
    int32 flags = 5;
    int32 italicAngle = 6;
    int32 descent = 7;

}


message GlyphWidth_proto {
    int32 firstChar = 1;
    int32 lastChar = 2;
    repeated int32 widthList = 3;

}


message FontBBox_proto {
    int32 lowerLeftX = 1;
    int32 lowerLeftY = 2;
    int32 upperRightX = 3;
    int32 upperRightY = 4;

}

message PdfFontStream_proto {
    string fontName = 1;
    FontMetric_proto fontMetric = 2;
    bool pdfCompression = 3;
}

message FontMetric_proto {
    string fontName = 1;
    map<int32, float> fontMap = 2;
    FloatFloat_proto fontHeight = 3;
    repeated EmbeddedFontDescriptor_proto fontDescriptor = 4;

}


message FloatFloat_proto {
    float value1 = 1;
    float value2 = 2;

}

message PdfFontDescriptor_proto {
    int64 idPdfFontStream = 1;
    string fontKeyName = 2;
}

message PdfGoToPage_proto {
    int64 pageNbr = 1;
    int32 left = 2;
    int32 top = 3;
}


message PdfLink_proto {
    com.sysalto.report.serialization.common.BoundaryRect_proto boundaryRect_proto = 1;
    int64 idAction = 2;

}

message PdfGoToUrl_proto {
    string url = 1;
}

message ImageMetaData_proto {
    int32 width=1;
    int32 height=2;
    int32 pixelSize=3;
    bytes imageInByte=4;
}