syntax = "proto3";
option optimize_for = SPEED;

package com.sysalto.report.serialization;

import "com/sysalto/report/serialization/common/report_common_proto.proto";

message ReportPage_proto {
    repeated ReportItem_proto item = 1;
}

message ReportItem_proto {
    float deltaY = 1;
    oneof field {
        ReportLinkToPage_proto reportLinkToPage = 2;
        ReportLinkToUrl_proto reportLinkToUrl = 3;
        ReportText_proto reportText = 4;
        ReportTextAligned_proto reportTextAligned = 5;
        ReportTextWrap_proto reportTextWrap = 6;
        ReportPieChart_proto reportPieChart = 7;
        ReportBarChart_proto reportBarChart = 8;
        ReportImage_proto reportImage = 9;
        ReportLine_proto reportLine = 10;
        ReportRectangle_proto reportRectangle = 11;
        ReportVerticalShade_proto reportVerticalShade = 12;
        com.sysalto.report.serialization.common.DirectDrawMovePoint_proto directDrawMovePoint = 13;
        com.sysalto.report.serialization.common.DirectDrawLine_proto directDrawLine = 14;
        com.sysalto.report.serialization.common.DirectFillStroke_proto directFillStroke_proto = 15;
        com.sysalto.report.serialization.common.DirectDrawRectangle_proto directDrawRectangle_proto = 16;
        com.sysalto.report.serialization.common.DirectDraw_proto directDraw = 17;
        com.sysalto.report.serialization.common.DirectDrawCircle_proto directDrawCircle = 18;
        com.sysalto.report.serialization.common.DirectDrawArc_proto directDrawArc = 19;
        com.sysalto.report.serialization.common.DirectDrawFill_proto direct_draw_fill = 20;
        com.sysalto.report.serialization.common.DirectDrawStroke_proto direct_draw_stroke = 21;
        com.sysalto.report.serialization.common.DirectDrawClosePath_proto direct_draw_close_path_proto = 22;
    }
}

message ReportLinkToPage_proto {
    com.sysalto.report.serialization.common.BoundaryRect_proto boundaryRect = 1;
    int64 pageNbr = 2;
    int32 left = 3;
    int32 top = 4;
}


message ReportLinkToUrl_proto {
    com.sysalto.report.serialization.common.BoundaryRect_proto boundaryRect = 1;
    string url = 2;
}


message ReportText_proto {
    com.sysalto.report.serialization.common.ReportTxt_proto txt = 1;
    float x = 2;
    float y = 3;
}


message ReportTextAligned_proto {
    com.sysalto.report.serialization.common.ReportTxt_proto rText = 1;
    float x = 2;
    float y = 3;
    int32 index = 4;
}

enum WrapAlign_proto {
    NO_WRAP = 0;
    WRAP_LEFT = 1;
    WRAP_RIGHT = 2;
    WRAP_CENTER = 3;
    WRAP_JUSTIFIED = 4;
}

message ReportTextWrap_proto {
    repeated com.sysalto.report.serialization.common.ReportTxt_proto text = 1;
    float x0 = 2;
    float y0 = 3;
    float x1 = 4;
    float y1 = 5;
    WrapAlign_proto wrapAlign = 6;
}

message OptionFloat_proto {
    bool null = 1;
    float float = 2;
}

message StringDouble_proto {
    string value1 = 1;
    double value2 = 2;
}

message DoubleStringString_proto {
    double value1 = 1;
    string value2 = 2;
    string value3 = 3;
}

message ReportPieChart_proto {
    com.sysalto.report.serialization.common.RFont_proto font = 1;
    string title = 2;
    repeated StringDouble_proto data = 3;
    float x0 = 4;
    float y0 = 5;
    float width = 6;
    float height = 7;
}

message ReportBarChart_proto {
    string title = 1;
    string xLabel = 2;
    string yLabel = 3;
    repeated DoubleStringString_proto data = 4;
    float x0 = 5;
    float y0 = 6;
    float width = 7;
    float height = 8;
}

message ReportImage_proto {
    string file = 1;
    float x = 2;
    float y = 3;
    float width = 4;
    float height = 5;
    float opacity = 6;
}


message ReportLine_proto {
    float x1 = 1;
    float y1 = 2;
    float x2 = 3;
    float y2 = 4;
    float lineWidth = 5;
    com.sysalto.report.serialization.common.RColor_proto color = 6;
    com.sysalto.report.serialization.common.OptionLineDashType_proto lineDashType = 7;
}





message ReportRectangle_proto {
    float x1 = 1;
    float y1 = 2;
    float x2 = 3;
    float y2 = 4;
    float radius = 5;
    OptionRColor_proto color = 6;
    OptionRColor_proto fillColor = 7;
}

message OptionRColor_proto {
    bool null = 1;
    com.sysalto.report.serialization.common.RColor_proto rColor = 2;
}

message ReportVerticalShade_proto {
    DRectangle_proto rectangle = 1;
    com.sysalto.report.serialization.common.RColor_proto from = 2;
    com.sysalto.report.serialization.common.RColor_proto to = 3;
}

message DRectangle_proto {
    float x1 = 1;
    float y1 = 2;
    float x2 = 3;
    float y2 = 4;
    float radius = 5;
}